# gnn-codec-holography

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml
docs/: architecture.md  usage.md
examples/: benchmark.py  colab_demo.ipynb  compress_model.py  test_installation.py
src/gnn_codec/: __init__.py  core.py  engine.py  gnn_models.py  graph_builder.py  holographic.py  predictor.py  quantization.py  training.py
tests/: test_core.py  test_engine.py
